--- a/Controls/BlockLayout.less
+++ b/Controls/BlockLayout.less
@@ -1,14 +1,14 @@
 .controls-BlockLayout_theme-@{themeName} {
    overflow: hidden;
-   background-color: @background_BlockLayout_between_blocks;
+   background-color: @separator_color_block;
 }
 
 .controls-BlockLayout_detached_theme-@{themeName} {
-   padding-top: @spacing_BlockLayout_between_blocks;
+   padding-top: @separator_thickness_block;
 }
 
 .controls-BlockLayout_theme-@{themeName} > .controls-BlockLayout__blockGroup_theme-@{themeName} {
-   @margin: -@spacing_BlockLayout_between_blocks / 2;
+   @margin: -@separator_thickness_block / 2;
 
    margin-left: @margin;
    margin-right: @margin;
@@ -24,7 +24,7 @@
    .controls-BlockLayout__block_theme-@{themeName} {
       position: relative;
       border-style: solid;
-      border-width: @spacing_BlockLayout_between_blocks / 2 + @border-width_BlockLayout-block;
+      border-width: @separator_thickness_block / 2 + @border-thickness_block;
       .box-sizing();
 
       /**
@@ -37,12 +37,12 @@
 
       .ws-is-mobile-platform & {
          border-color: transparent;
-         outline: @spacing_BlockLayout_between_blocks / 2 + @border-width_BlockLayout-block + 1 solid @background_BlockLayout_between_blocks;
-         outline-offset: -(@spacing_BlockLayout_between_blocks / 2 + @border-width_BlockLayout-block);
+         outline: @separator_thickness_block / 2 + @border-thickness_block + 1 solid @separator_color_block;
+         outline-offset: -(@separator_thickness_block / 2 + @border-thickness_block);
       }
 
       .ws-is-desktop-platform & {
-         border-color: @background_BlockLayout_between_blocks;
+         border-color: @separator_color_block;
       }
    }
 }
@@ -50,7 +50,7 @@
 .controls-BlockLayout__block {
    .for(6, {
       &_style_@{_i}_theme-@{themeName} {
-         background-color: ~"@{background_BlockLayout_block_style_@{_i}}";
+         background-color: ~"@{background-color_@{_i}_block}";
       }
    });
 }
@@ -64,13 +64,13 @@ body:not(.ws-is-ie10) .controls-BlockLayout__block_theme-@{themeName}:after {
    content: '';
    position: absolute;
    pointer-events: none;
-   top: -@border-width_BlockLayout-block;
-   right: -@border-width_BlockLayout-block;
-   bottom: -@border-width_BlockLayout-block;
-   left: -@border-width_BlockLayout-block;
-   border: @border-width_BlockLayout-block solid @border-color_BlockLayout-block;
-   border-radius: @border-radius_BlockLayout-block;
-   box-shadow: @box-shadow_BlockLayout-block;
+   top: -@border-thickness_block;
+   right: -@border-thickness_block;
+   bottom: -@border-thickness_block;
+   left: -@border-thickness_block;
+   border: @border-thickness_block solid @border-color_block;
+   border-radius: @border-radius_block;
+   box-shadow: @shadow_block;
 
    /**
     * Область между блоками реализуется через border. Тень рисуется поверх каждого блока.
@@ -84,11 +84,11 @@ body:not(.ws-is-ie10) .controls-BlockLayout__block_theme-@{themeName}:after {
    @variants: top, right, bottom, left;
    .for(@variants, {
       &@{_item}_theme-@{themeName} {
-         border-@{_item}: @spacing_BlockLayout_between_blocks solid @background_BlockLayout_between_blocks;
+         border-@{_item}: @separator_thickness_block solid @separator_color_block;
       }
    });
 }
 
 .controls-BlockLayout_background_theme-@{themeName} {
-   background-color: @background_BlockLayout_between_blocks;
+   background-color: @separator_color_block;
 }
