--- a/Controls-default-theme/aliases/_controls.less
+++ b/Controls-default-theme/aliases/_controls.less
@@ -1,3 +1,4 @@
+@import "_blockLayout";
 @import "_buttons";
 @import "_datePicker";
 @import "_dateRange";
@@ -27,6 +28,7 @@
 @import "_loadingIndicator";
 @import "_shortDatePicker";
 @import "_lookup";
+@import "_moveDialog";
 @import "_scroll";
 @import "_breadcrumbs";
 @import "_suggest";
