https://online.sbis.ru/opendoc.html?guid=fd867bdd-eb4d-4fdf-a1e2-37de4fd6262b

--- a/Controls-default-theme/controls/_Lookup.less
+++ b/Controls-default-theme/controls/_Lookup.less
@@ -13,6 +13,12 @@
 @line-height_Lookup-input-wrapper_l:           @height_l;
 @line-height_Lookup-input-wrapper_xl:          @height_xl;
 @line-height_Lookup-input-wrapper_2xl:         @height_2xl;
+@line-height_Lookup-link_default:              @height_control_default;
+@line-height_Lookup-link_xs:                   @height_xs;
+@line-height_Lookup-link_s:                    @height_s;
+@line-height_Lookup-link_l:                    @height_l;
+@line-height_Lookup-link_xl:                   @height_xl;
+@line-height_Lookup-link_2xl:                  @height_2xl;
 @font-size_LookupLink:                         @font-size_text_m;
 @line-height_LookupLink:                       @inline_height_m;
 @min-height_Lookup-input-render_multiLine:     @inline_height_m;
