--- a/Controls/_lookup/Lookup/Link/_LookUp_Link.less
+++ b/Controls/_lookup/Lookup/Link/_LookUp_Link.less
@@ -2,7 +2,34 @@
   display: inline-block;
   font-size: @font-size_LookupLink;
   color: @color_LookupLink;
-  line-height: @line-height_LookupLink;
+}
+
+.controls-Lookup__link-size-default_theme-@{themeName} {
+  line-height: @line-height_Lookup-link_default;
+}
+
+.controls-Lookup__link-size-m_theme-@{themeName} {
+  line-height: @line-height_Lookup-link_default;
+}
+
+.controls-Lookup__link-size-xs_theme-@{themeName} {
+  line-height: @line-height_Lookup-link_xs;
+}
+
+.controls-Lookup__link-size-s_theme-@{themeName} {
+  line-height: @line-height_Lookup-link_s;
+}
+
+.controls-Lookup__link-size-l_theme-@{themeName} {
+  line-height: @line-height_Lookup-link_l;
+}
+
+.controls-Lookup__link-size-xl_theme-@{themeName} {
+  line-height: @line-height_Lookup-link_xl;
+}
+
+.controls-Lookup__link-size-2xl_theme-@{themeName} {
+  line-height: @line-height_Lookup-link_2xl;
 }
 
 .controls-Lookup__link-default {
