https://online.sbis.ru/opendoc.html?guid=fd867bdd-eb4d-4fdf-a1e2-37de4fd6262b

--- a/Controls/_lookup/Lookup/Link/_LookUp_Link.less
+++ b/Controls/_lookup/Lookup/Link/_LookUp_Link.less
@@ -5,31 +5,31 @@
 }
 
 .controls-Lookup__link-size-default_theme-@{themeName} {
-  line-height: @line-height_Lookup-link_default;
+  line-height: @inline_height_default_input;
 }
 
 .controls-Lookup__link-size-m_theme-@{themeName} {
-  line-height: @line-height_Lookup-link_default;
+  line-height: @inline_height_m_input;
 }
 
 .controls-Lookup__link-size-xs_theme-@{themeName} {
-  line-height: @line-height_Lookup-link_xs;
+  line-height: @inline_height_xs_input;
 }
 
 .controls-Lookup__link-size-s_theme-@{themeName} {
-  line-height: @line-height_Lookup-link_s;
+  line-height: @inline_height_s_input;
 }
 
 .controls-Lookup__link-size-l_theme-@{themeName} {
-  line-height: @line-height_Lookup-link_l;
+  line-height: @inline_height_l_input;
 }
 
 .controls-Lookup__link-size-xl_theme-@{themeName} {
-  line-height: @line-height_Lookup-link_xl;
+  line-height: @inline_height_xl_input;
 }
 
 .controls-Lookup__link-size-2xl_theme-@{themeName} {
-  line-height: @line-height_Lookup-link_2xl;
+  line-height: @inline_height_2xl_input;
 }
 
 .controls-Lookup__link-default {
