https://online.sbis.ru/opendoc.html?guid=95bb1df2-57b5-40c8-a47b-49db00aa02f9

--- a/Controls-default-theme/aliases/_controls.less
+++ b/Controls-default-theme/aliases/_controls.less
@@ -12,6 +12,7 @@
 @import "_paging";
 @import "_popupTemplate";
 @import "_progress";
+@import "_propertyGrid";
 @import "_toggle";
 @import "_dropdown";
 @import "_dropdownPopup";
