https://online.sbis.ru/opendoc.html?guid=504d83da-3c08-4ce8-92cc-fe9f2fa8c701

--- a/Controls-default-theme/aliases/_dateRange.less
+++ b/Controls-default-theme/aliases/_dateRange.less
@@ -25,6 +25,6 @@
 
 //TODO: пересмотреть необходимость этих переменных, возможно просто заменить на выражение
 @shift-top_PeriodDialog-picker: -((@header_height_datePicker - @inline_height_default)/2 + @border-thickness_datePicker);
-@shift-left_PeriodDialog-picker: -(@header_padding-left_datePicker + @border-thickness_datePicker + @size_icon_s + @switcher_offset_datePicker);
+@shift-left_PeriodDialog-picker: -(@header_padding-left_datePicker + @border-thickness_datePicker + @icon-size_s + @switcher_offset_datePicker);
 @shift-left_PeriodDialog-picker-withoutModeBtn: -(@header_padding-left_datePicker + @border-thickness_datePicker);
 @shift-top_PeriodDialog-selector: floor((18px - @header_height_datePicker)/2) - @border-thickness_datePicker;
