https://online.sbis.ru/opendoc.html?guid=e66b22c3-1e81-4f8f-a1a1-65cb425ab86e

--- a/Controls-default-theme/aliases/_datePicker.less
+++ b/Controls-default-theme/aliases/_datePicker.less
@@ -57,6 +57,8 @@
 @yearnav_item_displayed_font-size_datePicker:            @font-size_l;
 
 // Выбор месяцев, кварталов и полугодий
+// Цвет фона
+@yearlist_background-color_datePicker:                  #f4f4f4;
 // Высота заголовка года
 @yearlist_heading_height_datePicker:                    32px;
 // Цвет текста заголовка года
