https://online.sbis.ru/opendoc.html?guid=c2e13b68-2e7c-4fce-8a0a-89f58c578a6b

--- a/Controls-default-theme/aliases/_treeGrid.less
+++ b/Controls-default-theme/aliases/_treeGrid.less
@@ -48,6 +48,8 @@
 @master_hidden-node_expander_icon-color_treeGrid:                 #8991A9;
 @master_node_expander_icon-size_treeGrid:                         12px;
 @master_hidden-node_expander_icon-size_treeGrid:                  12px;
+@master_node_expander_padding-left_treeGrid:                      4px;
+@master_node_expander_padding-top_treeGrid:                       10px;
 @master_node_expander_hover_icon-color_treeGrid:                  #313E78;
 @master_hidden-node_expander_hover_icon-color_treeGrid:           #0055BB;
 
