--- a/Controls/_grid/layout/table/_Table.less
+++ b/Controls/_grid/layout/table/_Table.less
@@ -148,6 +148,6 @@
     //realized by padding, itemActions will overlaps right shadow, with margin work fine
     padding-right: 0;
     margin-right: @offset-right_itemActions;
-    height: @height_itemActions - @master_item_selected_border-thickness_list;
+    height: @master_item_line-height_list;
   }
 }
