--- a/Controls/_treeGrid/TreeGridView/_TreeGridView.less
+++ b/Controls/_treeGrid/TreeGridView/_TreeGridView.less
@@ -100,16 +100,16 @@
    color: @master_node_expander_icon-color_treeGrid;
    font-family: @node_expander_icon_font-family_treeGrid;
    font-size: @master_node_expander_icon-size_treeGrid;
-   padding-left: @expander_width_treeGrid - @master_node_expander_icon-size_treeGrid;
-   padding-top: (@expander_height_treeGrid - @master_node_expander_icon-size_treeGrid) / 2;
+   padding: @master_node_expander_padding-left_treeGrid;
+   padding-top: @master_node_expander_padding-top_treeGrid;
 }
 
 .controls-TreeGrid__row-expander_hiddenNode_master_theme-@{themeName}:before {
    color: @master_hidden-node_expander_icon-color_treeGrid;
    font-family: @hidden-node_expander_icon_font-family_treeGrid;
    font-size: @master_hidden-node_expander_icon-size_treeGrid;
-   padding-left: @expander_width_treeGrid - @master_hidden-node_expander_icon-size_treeGrid;
-   padding-top: (@expander_height_treeGrid - @master_hidden-node_expander_icon-size_treeGrid) / 2;
+   padding-left: @master_node_expander_padding-left_treeGrid;
+   padding-top: @master_node_expander_padding-top_treeGrid;
 }
 
 .controls-TreeGrid__row-expander_theme-@{themeName}:before {
