https://online.sbis.ru/opendoc.html?guid=1ba6c19d-6e40-4380-82e2-629d58cf9675

--- a/Controls/_breadcrumbs/HeadingPath/_HeadingPath.less
+++ b/Controls/_breadcrumbs/HeadingPath/_HeadingPath.less
@@ -164,6 +164,6 @@
    width: 0;
 }
 
-.controls-BreadCrumbsPath__backButton_theme-@{themeName} .controls-fontsize-3xl_theme-@{themeName} when not (@font-size_m_headingBack = @font-size_3xl) {
+.controls-fontsize-headingPathBack_theme-@{themeName} {
    font-size: @font-size_m_headingBack;
 }
