https://online.sbis.ru/opendoc.html?guid=6f421d8e-26ea-4ee0-8c5c-d6ef0feab9c2

--- a/Controls-default-theme/aliases/_datePopup.less
+++ b/Controls-default-theme/aliases/_datePopup.less
@@ -64,6 +64,7 @@
 @yearlist_monthview_item_height_datePicker:                             12px;
 @yearlist_monthview_item_width_datePicker:                              12px;
 @yearlist_monthview_item_font-size_datePicker:                          8px;
+@yearlist_monthview_today_border-radius_datePicker:                     50%;
 @yearlist_monthview_bottom-offset_datePicker:                           2px;//todo
 
 //Выбранный период
