--- a/Controls-default-theme/dark/_aliases.less
+++ b/Controls-default-theme/dark/_aliases.less
@@ -77,6 +77,9 @@
 @background-color_sticky:                             #383d44;
 @header_background-color_sticky:                      #464d57;
 
+//dropdown
+@item_background-color_menu:                          #383d44;
+
 //notification
 @secondary_marker_color_notification:                 @secondary_color;
 
@@ -164,6 +167,7 @@
 @rangeSelection_border_color_datePicker:                                      #ff7033;
 @monthview_item_background-color_monthSlider:                                 #424851;
 @monthview_item_text-color_monthSlider:                                       #b8b8b8;
+@monthview_weekend_text-color_monthSlider:                                    #d94700;
 @monthview_item_hover_border-color_monthSlider:                               #b8b8b8;
 
 // Controls/DatePopup
