--- a/Controls/_datePopup/_monthsRange.less
+++ b/Controls/_datePopup/_monthsRange.less
@@ -198,6 +198,7 @@
       bottom: 0;
       left: 0;
       right: 0;
+      border-radius: @yearlist_monthview_today_border-radius_datePicker;
    }
 
    .controls-MonthViewVDOM__item {
