https://online.sbis.ru/opendoc.html?guid=20dc6d1c-effd-4c47-b016-af2253f40f3a

--- a/Controls/_dateRange/LinkView/_LinkView.less
+++ b/Controls/_dateRange/LinkView/_LinkView.less
@@ -2,6 +2,9 @@
    display: inline-block;
    .user-select();
    white-space: nowrap;
+}
+
+.controls-DateLinkView_theme-@{themeName} {
    height: @height_dateRangeSelector;
    line-height: @height_dateRangeSelector;
 }
