https://online.sbis.ru/opendoc.html?guid=3ad0a2dc-feb2-47a0-8150-0a6c74cec376

--- a/Controls/Application/Application.less
+++ b/Controls/Application/Application.less
@@ -60,8 +60,11 @@ img {
 }
 
 //в сафари на macOS выделяется страница синим при dnd
-.ws-is-desktop-safari.ws-is-drag {
-   user-select: none;
+.ws-is-drag {
+   &.ws-is-desktop-safari,
+   & input {
+      user-select: none;
+   }
 }
 
 //Скрытие иконки автозаполнения в полях ввода в браузере Safari на MacOS
