https://online.sbis.ru/opendoc.html?guid=fd867bdd-eb4d-4fdf-a1e2-37de4fd6262b

--- a/Controls/_lookup/Lookup/Link/_LookUp_Link.less
+++ b/Controls/_lookup/Lookup/Link/_LookUp_Link.less
@@ -5,31 +5,31 @@
 }
 
 .controls-Lookup__link-inlineheight-default_theme-@{themeName} {
-  line-height: @inline_height_default_input;
+  line-height: @inline_height_default_button;
 }
 
 .controls-Lookup__link-inlineheight-m_theme-@{themeName} {
-  line-height: @inline_height_m_input;
+  line-height: @inline_height_m_button;
 }
 
 .controls-Lookup__link-inlineheight-xs_theme-@{themeName} {
-  line-height: @inline_height_xs_input;
+  line-height: @inline_height_xs_button;
 }
 
 .controls-Lookup__link-inlineheight-s_theme-@{themeName} {
-  line-height: @inline_height_s_input;
+  line-height: @inline_height_s_button;
 }
 
 .controls-Lookup__link-inlineheight-l_theme-@{themeName} {
-  line-height: @inline_height_l_input;
+  line-height: @inline_height_l_button;
 }
 
 .controls-Lookup__link-inlineheight-xl_theme-@{themeName} {
-  line-height: @inline_height_xl_input;
+  line-height: @inline_height_xl_button;
 }
 
 .controls-Lookup__link-inlineheight-2xl_theme-@{themeName} {
-  line-height: @inline_height_2xl_input;
+  line-height: @inline_height_2xl_button;
 }
 
 .controls-Lookup__link-default {
