--- a/Controls/_listRender/Columns/_Columns.less
+++ b/Controls/_listRender/Columns/_Columns.less
@@ -6,12 +6,8 @@
 
 .controls-ColumnsView_column {
    height: 100%;
-   max-width: @max-width_ColumnsView_tile;
-}
-
-.controls-ColumnsView__itemsContainer {
-   margin: 0 @side-spacing_ColumnsView_columns;
-   column-gap: @side-spacing_ColumnsView_columns_val * 2;
+   padding: 0 @side-spacing_ColumnsView_columns;
+   box-sizing: border-box;
 }
 
 .controls-ColumnsView__itemV {
@@ -53,8 +49,4 @@
    box-sizing: border-box;
    border: 1px solid @border-color_ColumnsView_tile_marked;
    pointer-events: none;
-}
-
-.ws-is-hover .controls-BaseControl_showActions {
-
 }
