https://online.sbis.ru/opendoc.html?guid=7693bcb1-6d26-4fb5-a600-1d1170df4c3a

--- a/Controls/_grid/layout/grid/_Grid.less
+++ b/Controls/_grid/layout/grid/_Grid.less
@@ -314,6 +314,14 @@
    padding-right: @cell_padding-right_default_grid;
 }
 
+.controls-Grid__cell_spacingLeft_m_theme-@{themeName} {
+   padding-left: @cell_padding-left_default_grid;
+}
+
+.controls-Grid__cell_spacingRight_m_theme-@{themeName} {
+   padding-right: @cell_padding-right_default_grid;
+}
+
 .controls-Grid__cell_spacingLeft_s_theme-@{themeName} {
    padding-left: @cell_padding-left_s_grid;
 }
