https://online.sbis.ru/opendoc.html?guid=95bb1df2-57b5-40c8-a47b-49db00aa02f9

--- a/Controls-default-theme/_new-mixins.less
+++ b/Controls-default-theme/_new-mixins.less
@@ -1,4 +1,4 @@
-.icon-size(@size: 16px, @fontFamily: @font-family_icon_size-s) {
+.icon-size(@size: @icon-size_s, @fontFamily: @icon_font-family_s) {
    font-size: @size !important;
    line-height: @size !important;
    width: @size;
@@ -6,14 +6,14 @@
    font-family: @fontFamily !important;
 }
 
-.icon-size-without-important(@size: 16px, @fontFamily: @font-family_icon_size-s) {
+.icon-size-without-important(@size: @icon-size_s, @fontFamily: @icon_font-family_s) {
    font-size: @size;
    width: @size;
    height: @size;
    font-family: @fontFamily;
 }
 
-.icon-common(@font-size: @size_icon_s, @fontFamily: @font-family_icon_size-s) {
+.icon-common(@font-size: @icon-size_s, @fontFamily: @icon_font-family_s) {
    font-size: @font-size;
    font-family: @fontFamily;
    speak: none;
@@ -24,21 +24,21 @@
    line-height: 1;
 }
 
-.icon(@size: @size_icon_s, @fontFamily: @font-family_icon_size-s) {
+.icon(@size: @icon-size_s, @fontFamily: @icon_font-family_s) {
    .icon-common(@size, @fontFamily);
    width: @size;
    height: @size;
    display: inline-block;
 }
 
-.icon-with-size(@font-size: @size_icon_s, @fontFamily: @font-family_icon_size-s, @size: @size_icon_s) {
+.icon-with-size(@font-size: @icon-size_s, @fontFamily: @icon_font-family_s, @size: @size_icon_s) {
    .icon-common(@font-size, @fontFamily);
    width: @size;
    height: @size;
    display: inline-flex;
 }
 
-.compatPlaceholder(@color: @color_placeholder) {
+.compatPlaceholder(@color: @placeholder-color_inputText) {
    .user-select(none);
    position: absolute;
    top: 0;
