--- a/Controls-default-theme/aliases/_popupTemplate.less
+++ b/Controls-default-theme/aliases/_popupTemplate.less
@@ -197,6 +197,10 @@
 @maximized-button_padding-top_stack:                                        7px;
 @maximized-button_padding-right_stack:                                      8px;
 
+// Изменение размера
+@resizingLine_mobile_offset-left_stack:                                     15px;
+@resizingLine_mobile_thickness_stack:                                       25px;
+
 
 
 // Переменные для окна подтверждения
