--- a/Controls/_lookupPopup/SelectedCollection/_Popup.less
+++ b/Controls/_lookupPopup/SelectedCollection/_Popup.less
@@ -12,14 +12,14 @@
 
 .controls-SelectedCollection__header_wrapper {
     line-height: @icon-size_m;
-    padding-left: @spacing_default_l;
+    padding-left: @content_padding-horizontal_infobox;
     padding-top: @close-button_offset-top_infobox;
 }
 
 .controls-SelectedCollection__in_popup {
-    padding-left: @spacing_default_l;
-    padding-right: @spacing_default_l;
-    padding-bottom: @spacing_default_m;
+    padding-left: @content_padding-horizontal_infobox;
+    padding-right: @content_padding-horizontal_infobox;
+    padding-bottom: @content_padding-vertical_infobox;
 }
 
 .controls-SelectedCollection__collection_multiLine.controls-SelectedCollection__in_popup {
