--- a/Controls/_suggest/_InputController/_InputController.less
+++ b/Controls/_suggest/_InputController/_InputController.less
@@ -85,7 +85,7 @@
 .controls-Suggest__empty {
 	color: @unaccented_text-color;
 	text-align: center;
-	padding: @spacing_default_xl 0;
+	padding: @placeholder_padding-top_l_list 0;
 }
 
 .controls-Suggest__scrollContainer {
