https://online.sbis.ru/opendoc.html?guid=34bc5327-8bba-41d8-b728-c016bbc21d45

--- a/Controls/Application/oldCss.less
+++ b/Controls/Application/oldCss.less
@@ -48,36 +48,36 @@
 /* ATTENTION styles */
 .icon-attention
 {
-   color: @color_warning;
+   color: @warning_color;
 }
 
 /* DONE styles */
 .icon-done
 {
-   color: @color_success;
+   color: @success_color;
 }
 
 /* ERROR styles */
 .icon-error
 {
-   color: @color_danger;
+   color: @danger_color;
 }
 
 /* PRIMARY styles */
 .icon-primary
 {
-   color: @color_secondary;
-   fill: @color_secondary;
+   color: @secondary_icon-color;
+   fill: @secondary_icon-color;
 }
 
 /* DISABLED styles */
 .icon-disabled
 {
-   color: @color_readOnly;
-   fill: @color_readOnly;
+   color: @unaccented_icon-color;
+   fill: @unaccented_icon-color;
 }
 .icon-hover{
-   color: @color_primary;
+   color: @primary_color;
 }
 /* Для тех, кто поддерживает... */
 .icon-small, .icon-medium, .icon-large, .icon-size, .icon-16, .icon-24, .icon-32, .icon-default {
