--- a/Controls-default-theme/_aliases.less
+++ b/Controls-default-theme/_aliases.less
@@ -94,6 +94,21 @@
 
 
 
+// Линейка стандартных отступов
+// Примечание: на эти переменные лучше делать ссылки из других переменных, а не ссылаться из стилей
+
+@offset_3xs:                        2px;
+@offset_2xs:                        4px;
+@offset_xs:                         6px;
+@offset_s:                          8px;
+@offset_m:                          12px;
+@offset_l:                          16px;
+@offset_2xl:                        20px;
+@offset_3xl:                        24px;
+
+
+
+
 // Толщина обводки контролов.
 
 @border-thickness:                  1px;
