https://online.sbis.ru/opendoc.html?guid=7674627c-cc80-4063-ae23-550646a11624

--- a/Controls/_input/Password/_Password.less
+++ b/Controls/_input/Password/_Password.less
@@ -3,7 +3,7 @@
   align-self: center;
   color: @trigger-color_inputPassword;
   margin-right: @padding-horizontal_inputText;
-  .icon(@trigger_icon-size_inputPassword, @font-family_icon_size-m);
+  .icon(@trigger_icon-size_inputPassword, @icon_font-family_m);
 }
 
 .controls-Password__field_theme_@{themeName}_margin {
