--- a/Controls-default-theme/aliases/_popupTemplate.less
+++ b/Controls-default-theme/aliases/_popupTemplate.less
@@ -280,3 +280,9 @@
 
 @close-button_offset-top_notification:                                      8px;
 @close-button_offset-right_notification:                                    8px;
+
+// не использовать !
+@line-height_dialogTemplate_caption:                                        42px;//TODO https://online.sbis.ru/opendoc.html?guid=4e96f146-f21e-4267-89d6-3f20ae2a0acf
+@spacing_DialogTemplate-between-header-border:                              40px; //TODO для совместимости
+@resizing-line_mobile_width_stack:                                          25px;
+@resizing-line_mobile_left_stack:                                           15px;
