https://online.sbis.ru/opendoc.html?guid=f3c307c9-1800-4dfc-8977-cd6015f22877

--- a/Controls-default-theme/aliases/_treeGrid.less
+++ b/Controls-default-theme/aliases/_treeGrid.less
@@ -51,7 +51,7 @@
 @master_node_expander_hover_icon-color_treeGrid:                  #313E78;
 @master_hidden-node_expander_hover_icon-color_treeGrid:           #0055BB;
 
-@node-footer_max-font-size_treeGrid:                              @font-size_xl;
+@node-footer_max-font-size_treeGrid:                              @font-size_m;
 @node-footer_more_font-size_treeGrid:                             @font-size_l;
 
 //Драг н дроп
@@ -64,3 +64,8 @@
 @node_font-size_treeGrid:                                         @font-size_2xl;
 @hidden-node_font-size_treeGrid:                                  @font-size_xl;
 @leaf_font-size_treeGrid:                                         @item_font-size_m_grid;
+
+// Подвал ноды
+
+@footer-node_min-heght:                                           25px;
+@footer-node_padding-top-s:                                       2px;
