https://online.sbis.ru/opendoc.html?guid=6571d2d1-3226-4dd7-81c1-b343cfa9f913

--- a/Controls-default-theme/aliases/_popupTemplate.less
+++ b/Controls-default-theme/aliases/_popupTemplate.less
@@ -284,3 +284,7 @@
 
 @close-button_offset-top_notification:                                      8px;
 @close-button_offset-right_notification:                                    8px;
+
+// не использовать !
+@line-height_dialogTemplate_caption:                                        42px;//TODO https://online.sbis.ru/opendoc.html?guid=4e96f146-f21e-4267-89d6-3f20ae2a0acf
+@spacing_DialogTemplate-between-header-border:                              40px; //TODO для совместимости
