https://online.sbis.ru/opendoc.html?guid=bf50507d-1dce-44f2-b392-1491a7bf5e8a

--- a/Controls-default-theme/aliases/_heading.less
+++ b/Controls-default-theme/aliases/_heading.less
@@ -16,7 +16,7 @@
 @font-size_4xl_heading:                                                     @font-size_4xl;
 @font-size_5xl_heading:                                                     @font-size_5xl;
 
-@font-size_m_headingBack:                                                   @font-size_3xl;
+@font-size_headingPathBack_headingBack:                                     @font-size_3xl;
 
 // Цвета текста
 
