--- a/Controls/_breadcrumbs/HeadingPath/_HeadingPath.less
+++ b/Controls/_breadcrumbs/HeadingPath/_HeadingPath.less
@@ -165,5 +165,5 @@
 }
 
 .controls-fontsize-headingPathBack_theme-@{themeName} {
-   font-size: @font-size_m_headingBack;
+   font-size: @font-size_headingPathBack_headingBack;
 }
