--- a/Controls-default-theme/dark/_aliases.less
+++ b/Controls-default-theme/dark/_aliases.less
@@ -179,6 +179,11 @@
 @monthnav_item_text-color_datePicker:                                      #b8b8b8;
 @monthnav_item_border-color_datePicker:                                    #535c68;
 @monthlist_heading_text-color_datePicker:                                  #cccccc;
+@monthlist_monthview_item_background-color_datePicker:                     #424851;
+@monthlist_monthview_weekend_text-color_datePicker:                        #d94700;
+@calendar-header_border-bottom-color_datePicker:                           #30343b;
+@monthnav_year_border-color_datePicker:                                    #535c68;
+@monthlist_monthview_item_text-color_datePicker:                           #b8b8b8;
 
 //List
 @item_separator_s_color_list:                                                 #4a515a;
@@ -201,13 +206,4 @@
 @hidden-node_expander_hover_icon-color_treeGrid:                              @node_expander_hover_icon-color_treeGrid;
 @master_node_expander_hover_icon-color_treeGrid:                              @node_expander_hover_icon-color_treeGrid;
 @master_hidden-node_expander_hover_icon-color_treeGrid:                       @node_expander_hover_icon-color_treeGrid;
-
-
-//TODO OLD NOT SPECIFIED VARIABLES
-
-
-// Controls/DateRangeBigChoose
-@border-color_DateRangeBigChoose:                                             #535c68;
-
-
 //last line
