https://online.sbis.ru/opendoc.html?guid=ccdf9b10-a1d3-4e0b-a94e-4b4a0c4f28e0

--- a/Controls-demo/Controls-demo.less
+++ b/Controls-demo/Controls-demo.less
@@ -325,6 +325,9 @@
   margin: 10px;
   box-shadow: 1px 0 4px 0 #ccc;
 }
+.controlsDemo__Grid__expander-container {
+  width: 205px;
+}
 /*==========[ Controls-demo/grid ]================*/
 
 .controlsDemo__PopupTemplate__headerWrapper {
