https://online.sbis.ru/opendoc.html?guid=95bb1df2-57b5-40c8-a47b-49db00aa02f9

--- a/Controls-demo/Input/Dropdown/Dropdown.less
+++ b/Controls-demo/Input/Dropdown/Dropdown.less
@@ -73,7 +73,7 @@
 
 .ControlsDemo-InputDropdown-contentTemplate:hover {
    .ControlsDemo-InputDropdown-myIcon {
-      color: @color_link-hover;
+      color: @link_hover_text-color;
    }
 }
 
